<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/imageView_background_2"
    tools:context=".ui.fragments.ChoiceFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/universeImage"
            android:layout_width="314dp"
            android:layout_height="250dp"
            android:layout_marginTop="4dp"
            android:background="@color/imageView_background_2"
            android:src="@drawable/rotating_astro"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/solarSystemImage"
            android:layout_width="314dp"
            android:layout_height="238dp"
            android:layout_marginTop="320dp"
            android:background="@color/imageView_background_2"
            android:src="@drawable/circle_solar"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/explore_textView"
            android:layout_width="94dp"
            android:layout_height="600dp"
            android:background="@color/blue_background"
            android:fontFamily="@font/aspacebold                            "
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/explore_textView"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/universeText"
            android:layout_width="314dp"
            android:layout_height="70dp"
            android:layout_marginTop="256dp"
            android:background="@color/imageView_background_2"
            android:fontFamily="@font/aspaceregular"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/textView_universe"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/universeImage" />

        <TextView
            android:id="@+id/solartext"
            android:layout_width="312dp"
            android:layout_height="70dp"
            android:layout_marginTop="540dp"
            android:fontFamily="@font/aspaceregular"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/textView_solarSystem"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.989"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/beyond_textView"
            android:layout_width="94dp"
            android:layout_height="600dp"
            android:background="@color/blue_background"
            android:fontFamily="@font/aspacebold                            "
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:padding="8dp"
            android:text="BEYOND"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/explore_textView"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/nasaKids"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginEnd="8dp"
            android:background="@color/imageViews_background"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/nasa_kids_club_textView"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.867"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/solartext" />

        <TextView
            android:id="@+id/find"
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:background="@drawable/round_text_view"
            android:fontFamily="@font/aspaceregular"
            android:gravity="center"
            android:text="@string/find_planetarium_textView"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/locationInput"
            app:layout_constraintHorizontal_bias="0.927"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/locationInput"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/text_color"
            android:gravity="center"
            android:hint="AVAILABLE SOON"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/submit"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="176dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/round_button"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>